Tue Aug 13 11:21:44 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: applied another patch from Nathan Myers about
	  a possible memory leak in case of error

Mon Aug 12 23:12:59 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: applied a patch from Nathan Myers about
	  an erroneous free in case of error

Thu Aug  1 14:29:11 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: upon suggestion of Marc-Andre Lemburg, make 
	  the misdetection of libxml2 python bindings a warning only

Sun Jul 21 19:10:00 HKT 2002 William Brack <wbrack@mmm.com.hk>

	* xsltInternals.h/xslt.c/transform.c and pattern.c: fixed
	  a bug reported by Gero Meissner (87230)
	* fixed a problem compiling python directory when multiple
	  'make' jobs were executed (python/Makefile.am)

Wed Jul 17 19:58:36 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c: fixed a bug reported by Keith Isdale
	  at the xsltdbg interface when encountering an empty attribute
	  set.

Wed Jul 17 19:51:47 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* tests/* : the change in HTML meta encoding tag serialization
	  affected some of the results

Thu Jul 11 22:04:30 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am: adding doc/xsltproc.xml to the tarball
	  to fix Red Hat bug #68614 

Wed Jul 10 21:28:11 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>
	
	* win32/Makefile.msvc: Made the copy *.pdb in install succeed even
	  if there is no *.pdb
	
Sat Jul  6 22:00:08 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.19
	* doc/* : rebuilt the docs

Sat Jul  6 17:51:14 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixed bug #83749 about namespace generated
	  being invalid when they are inherited from the context.

Fri Jul  5 22:27:47 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixed bug #86753 on multiple identical